<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DestinationActivity"
    tools:ignore="MergeRootFrame" >
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/Khaki"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/name_project_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="85dp"
            android:layout_marginRight="85dp"
            android:layout_marginTop="5dp"
            android:text="@string/name_project"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name_project"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/name_project_hint"
             >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/destination_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:lines="1"
            android:text="@string/destination_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/name_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/name_city_hint"
            android:text="13 rue jean giono 91000 evry" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/location_show_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/location_show"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/select_diametre_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_diametre_label"
            android:layout_marginRight="50dp"
            android:layout_marginLeft="50dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/open_pick_radius"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/button_open_picker_radius"
            android:onClick="pickDays"
            android:textColor="@color/Wheat" />

        <TextView
            android:id="@+id/duration_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="5dp"
            android:text="@string/duration_text"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        <Button
            android:id="@+id/open_pick_days"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:text="@string/button_open_picker_days"
            android:onClick="pickDays"
            android:textColor="@color/Wheat" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button"
            android:text="@string/next_step"
            android:textColor="@color/Wheat" />

    </LinearLayout>
</ScrollView>
</FrameLayout>
